--- a/app/views/users/contacts.html.erb
+++ b/app/views/users/contacts.html.erb
@@ -18,20 +18,19 @@
     </li> 
   </ul>
 
-  <% if user_signed_in? && @user.id == current_user.id %>
-    <div class="text-center mt-3">
-      <%= link_to  "投稿する",new_post_path, class: "post-button" %>
+  <%= form_for(@contact, url: confirm_path) do |f| %>
+    <div class="form-group">
+      <%= f.label :name, 'お名前*' %>
+      <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :message, 'メッセージ*' %>
+      <%= f.text_area :message, size: '10x10', class: 'form-control' %>
+    </div>
+
+    <div>
+      <%= f.submit '入力内容確認' %>
     </div>
   <% end %>
-    
-
-  <div class="container gallery text-center" style="">
-    <% @results.reverse_each do |post| %>
-      <%= link_to image_tag(post.image.variant(combine_options:{gravity: :center, resize:"585x585^", crop:"585x585+0+0"}).processed, class: "post-image"), post_path(post) %>
-    <% end %>
-  </div> 
-  <div class="text-center">
-    <%= paginate @results %>
-  </div>
-  
 </div>
