--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Change your password</h2>
+<h2>パスワードの変更</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -22,4 +22,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="actions text-center">
+  <%= render "devise/shared/links" %>
+</div>
