--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="actions text-center my-4">
-    <%= f.submit "Sign up", class: "btn btn-outline-primary" %>
+    <%= f.submit "新規作成", class: "btn btn-outline-primary" %>
   </div>
 <% end %>
 
