--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,6 +39,8 @@
       <%= f.submit "変更を保存", class: "btn btn-large btn-primary" %>
     </div>
     <% end %>
+
+    <%= link_to "アカウントの削除", registration_path(@user), data: { confirm: "本当に削除しますか？" }, method: :delete %>
 <% else %>
     <%= form_for(@user, local: true) do |f| %>
 
@@ -77,6 +79,7 @@
     <div class="form-group text-center field">
       <%= f.submit "Save changes", class: "btn btn-large btn-primary text-center" %>
     </div>
-    
   <% end %>
+
+  <%= link_to "アカウントの削除", registration_path(@user), data: { confirm: "本当に削除しますか？" }, method: :delete %>
 <% end %>
