--- a/app/views/users/events.html.erb
+++ b/app/views/users/events.html.erb
@@ -14,7 +14,7 @@
       <%= link_to "動画", videos_user_path(@user), class: "" %>
     </li> 
     <li>
-      <%= link_to "Contact", "/", class: "" %>
+      <%= link_to "コンタクト", "/", class: "" %>
     </li> 
   </ul>
   <% if user_signed_in? && @user.id == current_user.id %>
