[add] user ファンクラブ作成申請メール送信(mailer)

--- a/app/views/home/makefanclub.html.erb
+++ b/app/views/home/makefanclub.html.erb
@@ -42,5 +42,5 @@
 </div>
 
 <div class="mt-2 text-center">
-  <a href="#" class="btn-flat-vertical-border mt-3">ファンクラブを解説する</a>
+  <%= link_to "開設を申し込む", new_adminrequest_path %>
 </div>
