[update] adminrequest mailer gmail　設定
localhost3000では通ったがテストが通らなくなった

--- a/app/views/adminrequest_mailer/send_mail.text.erb
+++ b/app/views/adminrequest_mailer/send_mail.text.erb
@@ -1,3 +1,3 @@
-<%= @adminrequest.teamname %> 様 からファンクラブ開設の申請が届きました。
+<%= @adminrequest.teamname %> 様(<%= "user_id : #{@adminrequest.user_id}" %>) からファンクラブ開設の申請が届きました。
 ・SNS_URL
 <%= @adminrequest.twitter_url %>
