--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -177,16 +177,27 @@
   $men: 0;
   $women: 1;
 
-
-  .card3 {
+  .card3{
+    position: relative;
     display: inline-block;
-    margin: 25px auto;
-    width: 530px;
-    height: 450px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px #ccc;
-    background-color: #fff;
+  }
+
+  .card-img3{
+  }
+
+  .card-content3 {
+    width: 100%;
+    height: 120px;
+    position: absolute;
+    top: 280px;
+    background:rgba(32, 32, 32, 0.55)
+  }
+
+  .card-name3{
+    position: relative;
+    top: -20px;
+    color: #fff;
+    font-size: 60px;
   }
 
   .user-woman{
@@ -194,8 +205,8 @@
   }
  
   .card-content3 {
-    padding: 10px;
-    margin-top: 20px;
+    position: absolute;
+
   }
 
   .card-title3 {
